--- a/public/block/retro.html
+++ b/public/block/retro.html
@@ -158,8 +158,10 @@ input[type=number]{direction:rtl;}
 </div></div></main>
 <script>
 const {ceil,floor,max,min,random,round} = Math
-const eid = document.getElementById.bind(document)
 const appid = 'dsblockretro'
+const eid = document.getElementById.bind(document)
+const ccw = i => (i+N-1) % N
+const cw = i => (i+1) % N
 const N = 4
 const NN = N * N
 const palette = {
@@ -279,9 +281,6 @@ class Block{
 	static ci = {I:1,J:2,L:3,O:4,S:5,T:6,Z:7}
 	static level = 120
 	static lines_per_level = 4
-	static ppci = {1:0,2:2,3:1,4:0,5:2,6:0,7:1}
-	static ppco = {I:0,J:2,L:1,O:0,S:2,T:0,Z:1}
-	static prev_z = 1/4
 	static keymap = {
 		'ArrowDown': 'down',
 		'ArrowLeft': 'left',
@@ -368,7 +367,10 @@ class Block{
 		Z: [0b00001100011, 0b000001001100100, 0b011000110000, 0b00000100110010],
 	}
 	static pieces = Object.keys(Block.pb)
+	static ppci = {1:0,2:2,3:1,4:0,5:2,6:0,7:1}
+	static ppco = {I:0,J:2,L:1,O:0,S:2,T:0,Z:1}
 	static pr = {I:0,J:2,L:2,O:0,S:0,T:2,Z:0}
+	static prev_z = 1/4
 	static score = {
 		1: 100,
 		2: 300,
@@ -385,8 +387,6 @@ class Block{
 		T: [-2, -3, -2, -3],
 		Z: [-2, -3, -2, -3],
 	}
-	static ccw(i){ return (i + N-1) % N }
-	static cw(i){ return (i+1) % N }
 	constructor(options){
 		const o = Object.assign({
 			bpf: 1,
@@ -467,10 +467,10 @@ class Block{
 				this.reset()
 			break
 			case 'reverse':
-				this.rotate(Block.ccw(rot))
+				this.rotate(ccw(rot))
 			break
 			case 'rotate':
-				this.rotate(Block.cw(rot))
+				this.rotate(cw(rot))
 			break
 			case 'bpf_decrement':
 				bpf = this.bpf - 1
