--- a/public/block/retro.html
+++ b/public/block/retro.html
@@ -87,11 +87,11 @@ input[type=number]{direction:rtl;}
 	Level<br>
 	<input id='theme' class='wide' min='0' step='1' onChange='game.set_level(this.value)' type='number' autocomplete='off'>
 </label>
-<button class='fade ctrl' onPointerDown="game.input('level_increment')">
+<button class='fade ctrl' onPointerDown="game.input('level_increment')" onPointerUp="body.focus();">
 	Next
 </button>
 <label class='fade button text-btn'>
-	<span class='hotkey'>G</span>rav<input id='grav' onChange='document.body.focus();game.gravitate(void 0, this.checked, true)' type='checkbox' autocomplete='off'>
+	<span class='hotkey'>G</span>rav<input id='grav' onChange='body.focus();game.gravitate(void 0, this.checked, true)' type='checkbox' autocomplete='off'>
 </label>
 <label class='fade button text-btn row'>
 	<input id='bpf' class='grow' min='0' max='20' step='1' onChange='game.gravitate(void 0, void 0, true, parseInt(this.value))' type='number' autocomplete='off'
@@ -101,7 +101,7 @@ input[type=number]{direction:rtl;}
 	Delay<br>
 	<input id='delay' class='wide' min='0' step='.1' onChange='game.gravitate(1000 * parseFloat(this.value), void 0, true)' type='number' autocomplete='off'>
 </label>
-<button title='Reset' class='fade ctrl' style='fill:var(--pi_10);' onClick='document.body.focus();game.reset()'>
+<button title='Reset' class='fade ctrl' style='fill:var(--pi_10);' onClick='body.focus();game.reset()'>
 	<svg viewBox="0 0 128 128">
 		<path d="M108.46,63.96v-25.7c0-1.8-1.7-2.9-3-2l-35,24.4v-22.4c0.13-1.13-0.69-2.15-1.82-2.28
 		c-0.45-0.05-0.9,0.05-1.28,0.28l-36.9,25.1v-23.5c0-1.05-0.85-1.9-1.9-1.9h0h-10.2c-1.05,0-1.9,0.85-1.9,1.9l0,0v52.3
@@ -109,7 +109,7 @@ input[type=number]{direction:rtl;}
 		c0.23-0.39,0.33-0.84,0.28-1.28v-22.3l35,24.4c1.4,0.9,3-0.2,3-2L108.46,63.96z"/>
 	</svg>
 </button>
-<button title='Controls' class='fade ctrl' onClick="document.querySelectorAll('.touch').forEach(el=>el.hidden=!el.hidden);let t=eid('touch');t.checked=!t.checked;t.checked||document.body.focus();">
+<button title='Controls' class='fade ctrl' onClick="doc.querySelectorAll('.touch').forEach(el=>el.hidden=!el.hidden);let t=eid('touch');t.checked=!t.checked;t.checked||body.focus();">
 	&vellip;
 	<input id='touch' checked hidden type='checkbox'>
 </button>
@@ -157,9 +157,11 @@ input[type=number]{direction:rtl;}
 </button>
 </div></div></main>
 <script>
-const {ceil,floor,max,min,random,round} = Math
 const appid = 'dsblockretro'
-const eid = document.getElementById.bind(document)
+const doc = document
+const body = doc.body
+const {ceil,floor,max,min,random,round} = Math
+const eid = doc.getElementById.bind(doc)
 const ccw = i => (i+N-1) % N
 const cw = i => (i+1) % N
 const N = 4
@@ -275,7 +277,7 @@ const themes = {
 }
 for(const pi in palette){
 	const k = `--pi_${parseInt(pi).toString(16).toUpperCase().padStart(2,'0')}`
-	document.documentElement.style.setProperty(k, palette[pi])
+	doc.documentElement.style.setProperty(k, palette[pi])
 }
 class Block{
 	static ci = {I:1,J:2,L:3,O:4,S:5,T:6,Z:7}
@@ -403,26 +405,26 @@ class Block{
 		this.storage = (typeof Storage) && (localStorage instanceof Storage) && localStorage
 		this.bpf = o.bpf
 		const create_canvas = !canvas
-		create_canvas && (canvas = document.createElement('canvas'))
+		create_canvas && (canvas = doc.createElement('canvas'))
 		this.canvas = canvas
 		canvas.style.position = 'absolute'
-		create_canvas && document.body.appendChild(canvas)
+		create_canvas && body.appendChild(canvas)
 		const c = this.c = canvas.getContext('2d')
 		this.keyhold = {}
 		this.keymap = Block.keymap
-		document.addEventListener('keydown', e => {
+		doc.addEventListener('keydown', e => {
 			const action = this.keymap[e.code]
-			if(!action || (document.activeElement !== document.body)){
+			if(!action || (doc.activeElement !== body)){
 				return
 			}
 			action && this.input(action, e.repeat)
 			if(this.keydown){ return }
 			this.keydown = true
-			document.querySelectorAll('.touch').forEach(
+			doc.querySelectorAll('.touch').forEach(
 				el => el.hidden = true
 			)
 		})
-		document.addEventListener('keyup', e => {
+		doc.addEventListener('keyup', e => {
 			const action = this.keymap[e.code]
 			this.keyhold[action] = false
 		})
