--- a/public/demo/pixel/index.html
+++ b/public/demo/pixel/index.html
@@ -452,10 +452,10 @@ SOFTWARE.
                         </select>
                     </label>
 
-                    <!-- <label class="control-check">
+                    <label class="control-check" checked hidden>
 		<input id="exportTransparent" type="checkbox"/>
 		Transparent background
-	</label> -->
+	</label>
                 </div>
                 <div class="control-group" aria-label="Palette">
                     <label class="control-group__title control-label">
