--- a/public/demo/pixel/index.html
+++ b/public/demo/pixel/index.html
@@ -65,11 +65,15 @@ SOFTWARE.
         button {
             text-align: left;
         }
+        input[type=number] {
+            text-align: right;
+        }
         p {
             line-height: 1.5;
             padding: 0 0.5em;
         }
         pre {
+            font-family: "Roboto Mono", monospace;
             white-space-collapse: preserve;
             white-space: pre;
         }
@@ -95,9 +99,6 @@ SOFTWARE.
             margin: 1px 0;
         }
         .mono,
-        pre {
-            font-family: "Roboto Mono", monospace;
-        }
         .row {
             display: flex;
             gap: 0.5em;
@@ -324,7 +325,6 @@ SOFTWARE.
         .modal__actions {
             display: flex;
             gap: 0.5em;
-            /* justify-content: flex-end; */
             padding: 0.75em 1.25em;
         }
     </style>
@@ -339,7 +339,7 @@ SOFTWARE.
                             class="tool-button danger-soft grow"
                             type="button"
                         >
-                            New
+                            <u>N</u>ew
                         </button>
                     </div>
 
@@ -424,10 +424,10 @@ SOFTWARE.
                     <div class="btn-row">
                         <div class="control-group__title high">Flip</div>
                         <button id="flipHBtn" class="tool-button" type="button">
-                            Horizontal
+                            <u>H</u>orizontal
                         </button>
                         <button id="flipVBtn" class="tool-button" type="button">
-                            Vertical
+                            <u>V</u>ertical
                         </button>
                     </div>
                 </div>
@@ -496,11 +496,7 @@ SOFTWARE.
                         >
                         <label class="status-pill control-label">
                             <div class="high">Brush</div>
-                            <select id="brushSize" class="custom-select">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                            <input id="brushSize" value="1" max="5" min="1" maxlength="1" autocomplete="off" type="number">
                         </label>
                         <pre
                             class="status-pill"
@@ -600,7 +596,7 @@ SOFTWARE.
                     this.pixelSize = 20;
 
                     this.currentColour = "#000000";
-                    this.tool = "draw"; // draw | fill | erase | pick
+                    this.tool = "draw"; // draw | erase | fill | pick
                     this.brushSize = 1;
 
                     this.isPointerDown = false;
@@ -691,6 +687,11 @@ SOFTWARE.
                     this.ctx.imageSmoothingEnabled = false;
                 }
 
+                setBrush(value) {
+                    this.brushSize = Math.max(1, Math.min(5, parseInt(value)));
+                    this.ui.brushSize.value = this.brushSize;
+                };
+
                 bindEvents() {
                     this.ui.gridSize.addEventListener("change", (e) => {
                         this.setGridSize(parseInt(e.target.value, 10), true);
@@ -700,10 +701,9 @@ SOFTWARE.
                         this.setColour(e.target.value, true);
                     });
 
-                    this.ui.brushSize.addEventListener("change", (e) => {
-                        this.brushSize = parseInt(e.target.value, 10);
-                        this.updateStatus();
-                    });
+                    this.ui.brushSize.addEventListener("blur", (e) => this.setBrush(e.target.value));
+                    this.ui.brushSize.addEventListener("change", (e) => this.setBrush(e.target.value));
+                    this.ui.brushSize.addEventListener("focus", (e) => this.ui.brushSize.select());
 
                     this.ui.drawTool.addEventListener("click", () =>
                         this.setTool("draw"),
@@ -806,14 +806,13 @@ SOFTWARE.
                     )
                         return;
 
-                    // Modal handling first. If a dialog is open, the page isn’t in charge.
+                    // Modal: Keys for open dialog, ignoring all else.
                     if (this.ui.modalOverlay.open) {
                         if (e.key === "Escape") {
                             e.preventDefault();
                             this.closeModal();
                         }
                         if (e.key === "Enter") {
-                            // Enter to confirm, because muscle memory matters.
                             e.preventDefault();
                             this.confirmNewProject();
                         }
@@ -844,35 +843,21 @@ SOFTWARE.
                         return;
                     }
 
-                    if (key === "d") this.setTool("draw");
-                    if (key === "e") this.setTool("erase");
-                    if (key === "f") this.setTool("fill");
-                    if (key === "i") this.setTool("pick");
-
                     if (key === "g") {
                         this.ui.toggleGrid.checked =
                             !this.ui.toggleGrid.checked;
                         this.ui.toggleGrid.dispatchEvent(new Event("change"));
                     }
 
-                    // Brush size quick steps
-                    if (key === "[") {
-                        this.brushSize = Math.max(1, this.brushSize - 1);
-                        this.ui.brushSize.value = String(this.brushSize);
-                        this.updateStatus();
-                    }
-                    if (key === "]") {
-                        this.brushSize = Math.min(3, this.brushSize + 1);
-                        this.ui.brushSize.value = String(this.brushSize);
-                        this.updateStatus();
-                    }
-
-                    // Flips with Shift+H / Shift+V to avoid clobbering normal letters
-                    if (e.shiftKey && key === "h") this.flipHorizontal();
-                    if (e.shiftKey && key === "v") this.flipVertical();
-
-                    // New project: N. Risky shortcut, but it triggers a modal, not a detonation.
-                    if (key === "n") this.openModal();
+                    if (key === "[") { this.setBrush(this.brushSize - 1); return; }
+                    if (key === "]") { this.setBrush(this.brushSize + 1); return; }
+                    if (key === "d") { this.setTool("draw"); return; }
+                    if (key === "e") { this.setTool("erase"); return; }
+                    if (key === "f") { this.setTool("fill"); return; }
+                    if (key === "h") { this.flipHorizontal(); return; }
+                    if (key === "i") { this.setTool("pick"); return; }
+                    if (key === "n") { this.openModal(); return; }
+                    if (key === "v") { this.flipVertical(); return; }
                 }
 
                 setGridSize(newSize, destructive = true) {
@@ -950,8 +935,8 @@ SOFTWARE.
                                 (_, i) => parsed[i] ?? null,
                             );
                         }
-                    } catch {
-                        /* storage can be broken, app shouldn’t be */
+                    } catch(e) {
+                        console.error('loadSavedSlots', e)
                     }
                 }
 
@@ -961,8 +946,8 @@ SOFTWARE.
                             "tabarc_pixelstudio_savedSlots",
                             JSON.stringify(this.savedSlots),
                         );
-                    } catch {
-                        /* again: not a bank */
+                    } catch(e) {
+                        console.error('saveSavedSlots', e)
                     }
                 }
 
