--- a/public/demo/pixel/index.html
+++ b/public/demo/pixel/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Draw, fill, color picker, flip, palette, export PNG" />
-<title>[Int32] Pixel Art Studio Silver</title>
+<title>Pixel Art Studio Silver</title>
 <style>
   :root {
     --accent: hsl(240, 30%, 40%);
@@ -401,10 +401,6 @@
           <div class="high">Scale</div>
           <input id="exportScale" class="status-pill" value="1" step="1" min="1" size="2" type="number">
         </label>
-        <label class="control-check" checked hidden>
-          <input id="exportTransparent" type="checkbox" />
-          Transparent background
-        </label>
       </div>
       <div class="control-group" aria-label="Palette">
         <label class="control-group__title control-label">
@@ -519,7 +515,6 @@
           "eraseTool",
           "exportPNG",
           "exportScale",
-          "exportTransparent",
           "fillTool",
           "flipHBtn",
           "flipVBtn",
@@ -1329,7 +1324,6 @@
       exportPNG() {
         const { gridSize, pixels, ui } = this
         const s = parseInt(ui.exportScale.value, 10);
-        const transparent = ui.exportTransparent.checked;
 
         const out = h("canvas");
         out.width = gridSize * s;
@@ -1338,20 +1332,15 @@
         const octx = out.getContext("2d");
         octx.imageSmoothingEnabled = false;
 
-        if (!transparent) {
-          octx.fillStyle = "#ffffff";
-          octx.fillRect(0, 0, out.width, out.height);
-        }
-
         for (let i = 0, len = pixels.length; i < len; ++i) {
-          const c = this.getPixel(i);
+          const c = pixels[i];
           if (!c) continue;
           octx.fillStyle = colorStr(c);
-          octx.fillRect(getX(i) * s, getY(i) * s, s, s);
+          octx.fillRect(this.getX(i) * s, this.getY(i) * s, s, s);
         }
 
         const link = h("a");
-        link.download = `pixel-art-${gridSize}x${gridSize}@${s}x${transparent ? "-transparent" : ""}.png`;
+        link.download = `pixel-art-${gridSize}x${gridSize}@${s}x.png`;
         link.href = out.toDataURL("image/png");
         link.click();
       }
